--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -27,6 +27,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          filr: ./Dockerfile
           push: true
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           tags: ${{ env.repoName }}:latest
