--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          filr: ./Dockerfile
+          file: ./Dockerfile
           push: true
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           tags: ${{ env.repoName }}:latest
