--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -16,6 +16,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
+        name: Version management
+        uses: PssbleTrngle/VersionManagment@v1.0.8
+        id: Version
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fallback: v0.1.0
+          prefix: v
+      -
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
@@ -34,3 +42,4 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+        run: echo ${{ steps.version.next }}
