Updated versioning action

--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -42,4 +42,7 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+        
+      - 
+        name: New Version
         run: echo ${{ steps.version.next }}
