--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -45,4 +45,4 @@ jobs:
         
       - 
         name: New Version
-        run: echo ${{ steps.version.output.next }}
+        run: echo ${{ steps.version.outputs.next }}
