--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -38,7 +38,9 @@ jobs:
           file: ./Dockerfile
           push: true
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
-          tags: ${{ env.repoName }}:latest
+          tags: |
+            ${{ env.repoName }}:latest
+            ${{ env.repoName }}:${{ steps.version.outputs.next }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
