--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -10,19 +10,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout  
+        uses: actions/checkout@v2  
+        with:  
+          fetch-depth: 0 
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Version management
-        uses: PssbleTrngle/VersionManagment@v1.0.8
-        id: Version
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fallback: v0.1.0
-          prefix: v
+        name: Version  
+        id: version  
+        uses: juliansangillo/tag-version@v1  
+        with:  
+          production-branch: main  
+          test-branch: test  
+          dev-branch: develop  
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
