--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -13,7 +13,6 @@ jobs:
         name: Checkout  
         uses: actions/checkout@v2  
         with:  
-          fetch-depth: 0 
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -21,13 +20,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Version  
-        id: version  
-        uses: juliansangillo/tag-version@v1  
-        with:  
-          production-branch: main  
-          test-branch: test  
-          dev-branch: develop  
+        name: Generate tags
+        id: docker_tags
+        uses: dnaka91/action-docker-tags@v0.1 
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -45,11 +40,10 @@ jobs:
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           tags: |
             ${{ env.repoName }}:latest
-            ${{ env.repoName }}:${{ steps.version.outputs.next }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
         
       - 
         name: New Version
-        run: echo ${{ steps.version.outputs.next }}
+        run:  echo ${{ env.repoName }}:${{ steps.docker_tags.outputs.tags }}}
