--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -19,9 +19,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Generate tags
-        id: docker_tags
-        uses: dnaka91/action-docker-tags@v0.1 
+        name: Get smart tag
+        id: prepare
+        uses: Surgo/docker-smart-tag-action@v1
+        with:
+          docker_image: ${{ env.repoName }}
+
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -45,4 +48,4 @@ jobs:
         
       - 
         name: New Version
-        run:  echo ${{ env.repoName }}:${{ steps.docker_tags.outputs.tags }}}
+        run:  echo :${{ steps.prepare.outputs.tag }}}
