--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -24,6 +24,7 @@ jobs:
         uses: Surgo/docker-smart-tag-action@v1
         with:
           docker_image: ${{ env.repoName }}
+          tag_with_sha: true
 
       -
         name: Login to DockerHub
