--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -19,13 +19,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Get smart tag
-        id: prepare
-        uses: Surgo/docker-smart-tag-action@v1
+        name: calculate next version
+        id: version
+        uses: patrickjahns/version-drafter-action@v1
         with:
-          docker_image: ${{ env.repoName }}
-          tag_with_sha: true
-
+          # (Optional) specify config name to use, relative to .github/. Default: version-drafter.yml
+          # config-name: my-config.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -49,4 +50,5 @@ jobs:
         
       - 
         name: New Version
-        run:  echo :${{ steps.prepare.outputs.tag }}}
+        run: echo Next:${{ steps.version.outputs.next-version }}
+        run: echo Current:${{ steps.version.outputs.current-version }} 
