--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -6,11 +6,16 @@ jobs:
   ci:
     env:
       repoName: emaxx21/telegrambot
+
     runs-on: ubuntu-latest
     steps:
       -
         name: Checkout  
         uses: actions/checkout@v2   
+      -
+        name: Get last tag
+        id: previoustag
+        uses: WyriHaximus/github-action-get-previous-tag@master
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -33,8 +38,11 @@ jobs:
           push: true
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           tags: |
-            ${{ env.repoName }}:latest 
+            ${{ env.repoName }}:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+      -
+        name: Previous Tag
+        run: echo ${{ steps.previoustag.outputs.tag }}
    
