--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -10,12 +10,18 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - id: release
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+
+      - 
+        id: release
         uses: rymndhng/release-on-push-action@master
         with:
           bump_version_scheme: minor
 
-      - name: Check Output Parameters
+      - 
+        name: Check Output Parameters
         run: |
           echo "Got tag name ${{ steps.release.outputs.tag_name }}"
           echo "Got release version ${{ steps.release.outputs.version }}"
@@ -50,7 +56,7 @@ jobs:
           push: true
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           tags: |
-            ${{ env.repoName }}:
+            ${{ env.repoName }}:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
