--- a/.github/workflows/pushtodocker.yml
+++ b/.github/workflows/pushtodocker.yml
@@ -8,7 +8,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps: 
-        id: release
+     - id: release
         uses: rymndhng/release-on-push-action@master
         with:
           bump_version_scheme: minor
