--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -8,6 +8,6 @@ jobs:
   steps:
   - uses: actions/setup-python@v2
   with:
-    python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-    architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-  - run: python bot.py
+    python-version: '3.8'
+    architecture: 'x64' 
+  - run: python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }}
