--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -3,13 +3,18 @@ on:
   push:
     branches: test
 jobs:
-  run-and-test:
+  build-and-test:
     runs-on: ubuntu-latest
-  steps:
-  - uses: actions/setup-python@v2
-  with:
-    python-version: '3.8'
-    architecture: 'x64' 
-  - run: |
-        python pip install --upgrade TelegramBotInterface
-        python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
+    strategy:
+      matrix:
+        python-version: [ '3.5','3.6','3.7','3.8']
+    name: Python ${{ matrix.python-version }} sample
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+      - run: python pip install --upgrade TelegramBotInterface
+      - run: python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
