--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -16,5 +16,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: python pip install --upgrade TelegramBotInterface
-      - run: python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
+      - run: |
+          python -m pip install --upgrade pip
+          python pip install --upgrade TelegramBotInterface
+          python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
