--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -5,18 +5,13 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.5','3.6','3.7','3.8']
-    name: Python ${{ matrix.python-version }} sample
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
-      - run: |
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+    with:
+      python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+      architecture: 'x64'
+    - run: |
           python -m pip install --upgrade pip
           python pip install --upgrade TelegramBotInterface
           python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
