--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -9,8 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     with:
-      python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-      architecture: 'x64'
+      python-version: '3.8'
     - run: |
           python -m pip install --upgrade pip
           python pip install --upgrade TelegramBotInterface
