--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -13,4 +13,4 @@ jobs:
     - run: |
           python -m pip install --upgrade pip
           python pip install --upgrade TelegramBotInterface
-          python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
+          python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }}
