--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -5,10 +5,11 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     with:
-      python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+      python-version: '3.7' # Version range or exact version of a Python version to use, using SemVer's version range syntax
       architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - run: |
           python -m pip install --upgrade pip
