--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -9,7 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     with:
-      python-version: '3.7' 
+      python-version: '3.7'
+      architecture: 'x64'
     - run: |
           python -m pip install --upgrade pip
           python pip install --upgrade TelegramBotInterface
