--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -11,7 +11,4 @@ jobs:
     with:
       python-version: '3.8'
       architecture: 'x64'
-    - run: |
-          python -m pip install --upgrade pip
-          python pip install --upgrade TelegramBotInterface
-          python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }}
+    - run: python -m pip install --upgrade pip
