--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -7,8 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-    with:
-      python-version: '3.8'
-      architecture: 'x64'
-    - run: python -m pip install --upgrade pip
+    - uses: BSFishy/pip-action@v1
+      with:
+        packages: |
+          requests
+          TelegramBotInterface
+   - run: python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
