--- a/.github/workflows/test-and-verify.yml
+++ b/.github/workflows/test-and-verify.yml
@@ -14,6 +14,6 @@ jobs:
 
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.7' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+        python-version: '3.7'
+        architecture: 'x64'
     - run: python bot.py ${{ secrets.TOKEN }} ${{ secrets.CHAT_ID }} --test
