--- a/.github/workflows/tag-and-pushto-dockerhub.yml
+++ b/.github/workflows/tag-and-pushto-dockerhub.yml
@@ -12,18 +12,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-      - 
-        id: release
-        uses: rymndhng/release-on-push-action@master
-        with:
-          bump_version_scheme: minor
 
       - 
-        name: Check Output Parameters
-        run: |
-          echo "New tag name ${{ steps.release.outputs.tag_name }}"
-          echo "New release version ${{ steps.release.outputs.version }}"
-      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
@@ -44,9 +34,11 @@ jobs:
           file: ./Dockerfile
           push: true
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          tag_with_ref: true
+          tag_with_sha: true
           tags: |
             ${{ env.repoName }}:latest
-            ${{ env.repoName }}:${{ steps.release.outputs.tag_name }}
+            ${{ env.repoName }}:${{ github.sha }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
