--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: main
 jobs:
-  release-on-push:
+  build-and-push:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -11,9 +11,8 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
-
-      - 
+        uses: actions/checkout@v2  
+      -  
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
@@ -25,6 +24,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: 
+        - uses: actions/setup-python@v1
+        - uses: BSFishy/pip-action@v1
+          with:
+            packages: |
+              requests
+              TelegramBotInterface
+        - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
+      
       -
         name: Build and push
         id: docker_build
