--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -25,13 +25,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: 
-        - uses: actions/setup-python@v1
-        - uses: BSFishy/pip-action@v1
-          with:
-            packages: |
-              requests
-              TelegramBotInterface
+        name: Testing 
+        uses: actions/setup-python@v1
+        uses: BSFishy/pip-action@v1
+        with:
+          packages: |
+            requests
+            TelegramBotInterface
         - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
       
       -
