Added testing step

--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -30,7 +30,7 @@ jobs:
         uses: BSFishy/pip-action@v1
         with:
           packages: |
-            TelegramBotInterface
+            requests
         - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
       
       -
