--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -25,9 +25,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        - uses: actions/checkout@v2
-        - uses: actions/setup-python@v1
-        - uses: BSFishy/pip-action@v1
+        uses: actions/checkout@v2
+        uses: actions/setup-python@v1
+        uses: BSFishy/pip-action@v1
         with:
           packages: requests
         - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
