--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -28,9 +28,9 @@ jobs:
         name: Test
         uses: actions/checkout@v2
         uses: actions/setup-python@v1
-        uses: BSFishy/pip-action@v1
+        uses: py-actions/py-dependency-install@v2
         with:
-          packages: requests
+          path: "requirements.txt"
         - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
       
       -
