--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/setup-python@v1
         uses: py-actions/py-dependency-install@v2
         with:
-          path: "requirements.txt"
+          path: "requeriments.txt"
         - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
       
       -
