--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -26,9 +26,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Test
-        uses: actions/checkout@v2
-        uses: actions/setup-python@v1
-        uses: py-actions/py-dependency-install@v2
+        - uses: actions/checkout@v2
+        - uses: actions/setup-python@v1
+        - uses: py-actions/py-dependency-install@v2
         with:
           path: "requeriments.txt"
 
