Added testing step

--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -31,10 +31,11 @@ jobs:
           path: "requeriments.txt"
       -
         name: Test app
-      - uses: actions/setup-python@v1
+        uses: actions/setup-python@v1
         with:
           python_version: '3.8'
       - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
+      
       -
         name: Build and push
         id: docker_build
