Added testing step

--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -26,13 +26,10 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Install dependencies
-        uses: py-actions/py-dependency-install@v2
+      - uses: py-actions/py-dependency-install@v2
+      - uses: actions/setup-python@v1
         with:
           path: "requeriments.txt"
-      -
-        name: Test app
-        uses: actions/setup-python@v1
-        with:
           python_version: '3.8'
       - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
       
