--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -25,13 +25,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Install dependencies
+        name: Install Python dependencies
         uses: py-actions/py-dependency-install@v2
-        uses: actions/setup-python@v1
         with:
-          path: "requeriments.txt"
-          python_version: '3.8'
-      - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true
+          path: "requirements.txt"
+        
       
       -
         name: Build and push
