--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -25,16 +25,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Install Python dependencies
-        uses: py-actions/py-dependency-install@v2
+        uses: actions/setup-python@v1
+      - uses: BSFishy/pip-action@v1
         with:
-          path: "requirements.txt"
-      -
-        name: Run Test
-        uses: actions/setup-python@v2
-        with:
-          python_version: '3.8'
-      - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true  
+          requirements: requirements.txt
+          - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true  
       
       -
         name: Build and push
