--- a/.github/workflows/CI-to-dockerhub.yml
+++ b/.github/workflows/CI-to-dockerhub.yml
@@ -28,8 +28,8 @@ jobs:
         uses: actions/setup-python@v1
       - uses: BSFishy/pip-action@v1
         with:
-          requirements: requirements.txt
-          - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true  
+          requirements: 'requirements.txt'
+        - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true  
       
       -
         name: Build and push
