--- a/.github/workflows/just-test.yml
+++ b/.github/workflows/just-test.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/setup-python@v1
       - uses: BSFishy/pip-action@v1
         with:
+          upgrade: true
           requirements: 'requirements.txt'
       - run: python bot.py ${{ secrets.TELEGRAM_TOKEN }} ${{ secrets.TELEGRAM_CHAT_ID }} true  
       - run: echo "Succesfully test." 
